# TwitchCal

./: README.md  main.py  pyproject.toml
twitchcal/: calendar.py  scraper.py  views.py
twitchcal/templates/: base.html  index.html
